Bugfix: "text-align" CSS property has no effect on <x-input>

--- a/stylesheets/x-input.css
+++ b/stylesheets/x-input.css
@@ -58,6 +58,7 @@
   font-family: inherit;
   font-size: inherit;
   font-weight: inherit;
+  text-align: inherit;
   cursor: inherit;
 }
 
